2008-08-11 Albert Chu <chu11@llnl.gov>

	* man/freeipmi.conf.5.pre.in: Fix text.
	
2008-08-10 Albert Chu <chu11@llnl.gov>

	* bmc-config/, ipmi-chassis-config/, ipmi-sensors-config/,
	pef-config/: Support hostrange config file options.

	* common/src/toolcommon/tool-config-file-common.h,
	common/src/toolcommon/tool-config-file-common.c: Support tool
	specific out of band configuration.

	* Globally update documentation and tools as needed.
	
2008-08-08 Albert Chu <chu11@llnl.gov>

	* Documentation cleanup.
	
2008-08-08 Albert Chu <chu11@llnl.gov>

	Merge contents from chassis_config_branch.

	* ipmi-chassis-config/Makefile.am,
	ipmi-chassis-config/ipmi-chassis-config.8.pre.in,
	ipmi-chassis-config/src/Makefile.am,
	ipmi-chassis-config/src/ipmi-chassis-config.h,
	ipmi-chassis-config/src/ipmi-chassis-config.c,
	ipmi-chassis-config/src/ipmi-chassis-config-argp.h,
	ipmi-chassis-config/src/ipmi-chassis-config-argp.c,
	ipmi-chassis-config/src/ipmi-chassis-config-boot-flags.h,
	ipmi-chassis-config/src/ipmi-chassis-config-boot-flags.c,
	ipmi-chassis-config/src/ipmi-chassis-config-boot-flags-valid-bit-clearing.h,
	ipmi-chassis-config/src/ipmi-chassis-config-boot-flags-valid-bit-clearing.c,
	ipmi-chassis-config/src/ipmi-chassis-config-front-panel-buttons.h,
	ipmi-chassis-config/src/ipmi-chassis-config-front-panel-buttons.c,
	ipmi-chassis-config/src/ipmi-chassis-config-power-conf.h,
	ipmi-chassis-config/src/ipmi-chassis-config-power-conf.c,
	ipmi-chassis-config/src/ipmi-chassis-config-validate.h,
	ipmi-chassis-config/src/ipmi-chassis-config-validate.c,
	ipmi-chassis-config/src/ipmi-chassis-config-map.h,
	ipmi-chassis-config/src/ipmi-chassis-config-map.c,
	ipmi-chassis-config/src/ipmi-chassis-config-sections.h,
	ipmi-chassis-config/src/ipmi-chassis-config-sections.c: New files.

	* common/src/configtool/config-tool-common.h,
	common/src/configtool/config-tool-section.h,
	common/src/configtool/config-tool-section.c,
	common/src/configtool/config-tool-commit.c,