@@ -1,6 +1,8 @@
 2008-08-11 Albert Chu <chu11@llnl.gov>
 
 	* man/freeipmi.conf.5.pre.in: Fix text.
+
+	* ipmi-locate/src/ipmi-locate.c: Fix output format.
 	
 2008-08-10 Albert Chu <chu11@llnl.gov>
 
